--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -3,7 +3,6 @@
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset= 北美节点,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/AppleNews.list
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
-ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Qobuz/Qobuz.list
 ruleset= 北美节点,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B%2B.list
 ruleset= 北美节点,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/T-mobile.list
 ruleset= 北美节点,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Others-US.list
@@ -31,6 +30,7 @@ ruleset= Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scrip
 ruleset= Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset= 自动选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset= 自动选择,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Others.list
+ruleset= 自动选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Qobuz/Qobuz.list
 ruleset= 漏网之鱼,[]FINAL
 
 ;-----------------------------------------------------------------------------------------------------------------------------------
