--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -24,6 +24,7 @@ ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/mas
 ruleset= Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Apple.list
 ruleset= Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
 ruleset= Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset= OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset= Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
 ruleset= Xbox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
 ruleset= Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
@@ -40,9 +41,10 @@ custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204
 custom_proxy_group= Apple`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= DisneyPlus`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
 custom_proxy_group= Game`select`[]自动选择`[]DIRECT`.*
-custom_proxy_group= Google`select`[]自动选择`[]DIRECT`.*
+custom_proxy_group= OneDrive`select`[]自动选择`[]DIRECT
 custom_proxy_group= Microsoft`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
 custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
+custom_proxy_group= Google`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= Spotify`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
 custom_proxy_group= Steam`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= Telegram`select`[]自动选择`[]北美节点`[]狮城节点`[]西欧节点
