--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -44,7 +44,7 @@ custom_proxy_group= Apple`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= DisneyPlus`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
 custom_proxy_group= Game`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= Microsoft`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
-custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
+custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点`[]非洲节点
 custom_proxy_group= Google`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= OneDrive`select`[]自动选择`[]DIRECT
 custom_proxy_group= Music`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
@@ -58,11 +58,12 @@ custom_proxy_group= 东南亚节点`select`(菲律宾|PH|Philippines|泰国|TH|T
 custom_proxy_group= 东欧节点`select`(乌克兰|UA|Ukraine|俄罗斯|RU|Russia|摩尔多瓦|MD|Moldova|乌兹别克斯坦|UZ|Uzbekistan)
 custom_proxy_group= 韩国节点`url-test`(韩国|KR|Korea|KOR|首尔)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group= 南美节点`select`(阿根廷|AR|Argentina|巴西|BR|Brazil|智利|CL|Chile)
-custom_proxy_group= 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group= 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group= 台湾节点`url-test`(台|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group= 西欧节点`select`(英国|UK|United Kingdom|伦敦|London|德国|DE|Germany|法兰克福|法国|FR|France|荷兰|NL|Netherlands|西班牙|ES|Spain|意大利|IT|Italy|爱尔兰|IE|Ireland)
 custom_proxy_group= 香港节点`url-test`(香港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= 非洲节点`url-test`(尼日利亚|NG|Nigeria|南非|ZA|South Africa)`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]自动选择`[]DIRECT`.*
 
