--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -32,7 +32,7 @@ ruleset= Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/ma
 ruleset= Xbox,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Xbox/Xbox.list
 ruleset= Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset= Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset= 自动选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.list
+ruleset= 自动选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.list
 ruleset= 自动选择,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/Others.list
 ruleset= 漏网之鱼,[]FINAL
 
@@ -53,7 +53,7 @@ custom_proxy_group= Telegram`select`[]自动选择`[]北美节点`[]狮城节点
 custom_proxy_group= Xbox`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点
 custom_proxy_group= YouTube`select`[]自动选择`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
-custom_proxy_group= 北美节点`select`(美国|US|United States|西雅图|Seattle|洛杉矶|LA|Los Angeles|加拿大|CA|Canda)
+custom_proxy_group= 北美节点`select`(美国|US|United States|西雅图|Seattle|洛杉矶|LA|Los Angeles|加拿大|CA|Canda)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group= 东南亚节点`select`(菲律宾|PH|Philippines|泰国|TH|Thailand|印度|IN|India|马来西亚|MY|Malaysia|印度尼西亚|ID|Indonesia|越南|VN|Vietnam)
 custom_proxy_group= 东欧节点`select`(乌克兰|UA|Ukraine|俄罗斯|RU|Russia|摩尔多瓦|MD|Moldova|乌兹别克斯坦|UZ|Uzbekistan)
 custom_proxy_group= 韩国节点`url-test`(韩国|KR|Korea|KOR|首尔)`http://www.gstatic.com/generate_204`300,,50
