--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -7,6 +7,7 @@ ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset= 北美节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/Star%2B%2B.list
 ruleset= 北美节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/T-mobile.list
 ruleset= 北美节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/Others-US.list
+ruleset= 土耳其节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/Others-Turkey.list
 ruleset= 南美节点,https://raw.githubusercontent.com/sky-sailing/A-Host-Collection/main/Clash/HBO.list
 ruleset= 南美节点,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Star%2B.list
 ruleset= 东欧节点,https://raw.githubusercontent.com/Melencolia11514/A-Host-Collection/main/Clash/Setanta.list
@@ -41,10 +42,10 @@ custom_proxy_group= 节点选择`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= Apple`select`[]自动选择`[]DIRECT`.*
-custom_proxy_group= DisneyPlus`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
+custom_proxy_group= DisneyPlus`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]土耳其节点`[]东南亚节点
 custom_proxy_group= Game`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= Microsoft`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
-custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点`[]非洲节点
+custom_proxy_group= Netflix`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]土耳其节点`[]东南亚节点`[]非洲节点
 custom_proxy_group= Google`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= OneDrive`select`[]自动选择`[]DIRECT
 custom_proxy_group= Music`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]东南亚节点
@@ -53,16 +54,17 @@ custom_proxy_group= Telegram`select`[]自动选择`[]北美节点`[]狮城节点
 custom_proxy_group= Xbox`select`[]自动选择`[]DIRECT`[]北美节点`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点
 custom_proxy_group= YouTube`select`[]自动选择`.*
 ;-----------------------------------------------------------------------------------------------------------------------------------
-custom_proxy_group= 北美节点`select`(美国|US|United States|西雅图|Seattle|洛杉矶|LA|Los Angeles|加拿大|CA|Canda)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group= 东南亚节点`select`(菲律宾|PH|Philippines|泰国|TH|Thailand|印度|IN|India|马来西亚|MY|Malaysia|印度尼西亚|ID|Indonesia|越南|VN|Vietnam)
-custom_proxy_group= 东欧节点`select`(乌克兰|UA|Ukraine|俄罗斯|RU|Russia|摩尔多瓦|MD|Moldova|乌兹别克斯坦|UZ|Uzbekistan)
-custom_proxy_group= 韩国节点`url-test`(韩国|KR|Korea|KOR|首尔)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group= 南美节点`select`(阿根廷|AR|Argentina|巴西|BR|Brazil|智利|CL|Chile)
-custom_proxy_group= 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group= 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group= 台湾节点`url-test`(台|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group= 西欧节点`select`(英国|UK|United Kingdom|伦敦|London|德国|DE|Germany|法兰克福|法国|FR|France|荷兰|NL|Netherlands|西班牙|ES|Spain|意大利|IT|Italy|爱尔兰|IE|Ireland)
 custom_proxy_group= 香港节点`url-test`(香港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= 狮城节点`url-test`(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= 台湾节点`url-test`(台|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= 韩国节点`url-test`(韩|KR|Korea|KOR|首尔)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= 北美节点`select`(美|US|United States|西雅图|Seattle|洛杉矶|LA|Los Angeles|加拿大|CA|Canda)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= 东南亚节点`select`(菲|PH|Philippines|泰|TH|Thailand|印|IN|India|马|MY|Malaysia|印度尼西亚|ID|Indonesia|越|VN|Vietnam)
+custom_proxy_group= 东欧节点`select`(乌|UA|Ukraine|俄|RU|Russia|摩尔多瓦|MD|Moldova|乌兹别克斯坦|UZ|Uzbekistan)
+custom_proxy_group= 南美节点`select`(阿根廷|AR|Argentina|巴西|BR|Brazil|智利|CL|Chile)
+custom_proxy_group= 西欧节点`select`(英|UK|United Kingdom|伦敦|London|德|DE|Germany|法兰克福|法|FR|France|荷|NL|Netherlands|西班牙|ES|Spain|意大利|IT|Italy|爱尔兰|IE|Ireland)
+custom_proxy_group= 土耳其节点`url-test`(土耳其|土|Tur|TK|Turkey)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group= 非洲节点`url-test`(尼日利亚|NG|Nigeria|南非|ZA|South Africa)`http://www.gstatic.com/generate_204`300,,50
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 漏网之鱼`select`[]自动选择`[]DIRECT`.*
