--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -3,6 +3,7 @@
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset= 北美节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/AppleNews.list
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
+ruleset= 北美节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Github.list
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset= 北美节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/Star%2B%2B.list
 ruleset= 北美节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/T-mobile.list
