--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -1,5 +1,6 @@
 [custom]
 ;-----------------------------------------------------------------------------------------------------------------------------------
+ruleset= DIRECT,https://raw.githubusercontent.com/l-deo/A-Host-Collection/refs/heads/main/Clash/Direct.list
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset= 北美节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/AppleNews.list
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
@@ -42,6 +43,7 @@ ruleset= 漏网之鱼,[]FINAL
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= 节点选择`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group= DIRECT`[]DIRECT
 ;-----------------------------------------------------------------------------------------------------------------------------------
 custom_proxy_group= Apple`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group= DisneyPlus`select`[]自动选择`[]韩国节点`[]日本节点`[]狮城节点`[]台湾节点`[]香港节点`[]土耳其节点`[]东南亚节点
