--- a/Clash/Config/Clash.ini
+++ b/Clash/Config/Clash.ini
@@ -1,6 +1,7 @@
 [custom]
 ;-----------------------------------------------------------------------------------------------------------------------------------
 ruleset= DIRECT,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/Direct.list
+ruleset= 英国节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/Others-UK.list
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset= 北美节点,https://raw.githubusercontent.com/l-deo/A-Host-Collection/main/Clash/AppleNews.list
 ruleset= 北美节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
@@ -67,7 +68,8 @@ custom_proxy_group= 北美节点`select`(美|US|United States|西雅图|Seattle|
 custom_proxy_group= 东南亚节点`select`(菲|PH|Philippines|泰|TH|Thailand|印|IN|India|马|MY|Malaysia|印度尼西亚|ID|Indonesia|越|VN|Vietnam)
 custom_proxy_group= 东欧节点`select`(乌|UA|Ukraine|俄|RU|Russia|摩尔多瓦|MD|Moldova|乌兹别克斯坦|UZ|Uzbekistan)
 custom_proxy_group= 南美节点`select`(阿根廷|AR|Argentina|巴西|BR|Brazil|智利|CL|Chile)
-custom_proxy_group= 西欧节点`select`(英|UK|United Kingdom|伦敦|London|德|DE|Germany|法兰克福|法|FR|France|荷|NL|Netherlands|西班牙|ES|Spain|意大利|IT|Italy|爱尔兰|IE|Ireland)
+custom_proxy_group= 英国节点`select`(英|UK|United Kingdom|伦敦|London)
+custom_proxy_group= 西欧节点`select`(德|DE|Germany|法兰克福|法|FR|France|荷|NL|Netherlands|西班牙|ES|Spain|意大利|IT|Italy|爱尔兰|IE|Ireland)
 custom_proxy_group= 土耳其节点`url-test`(土耳其|土|Tur|TK|Turkey)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group= 非洲节点`select`(尼日利亚|NG|Nigeria|南非|埃及|肯尼亚)
 ;-----------------------------------------------------------------------------------------------------------------------------------
